# wasmbrigde-plugin-template

./: Cargo.toml  README.md  sonar-project.properties
.github/workflows/: build.yml
src/: lib.rs
