[package]
name = "wasmbrigde-plugin"
version = "0.1.0"
authors = [
	"WasmBridge Team",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/wasmbrigde/wasmbrigde"
publish = false
[lib]
crate-type = [
	"cdylib",
]
[dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0.228", features = [
	"derive",
] }
serde_json = "1.0.149"
plugin-protocol = { git = "https://github.com/wasmbrigde/wasmbrigde" }
[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
